static/css/base.css
/* ... */
.prod-duct-card {
    max-width: 100%;
}

.review-tabs {
    padding: 47px 3rem 220px 0;
}

.review-tabs>ul>li>a {
    font-size: small !important;
}

.nav-tabs .nav-item.show .nav-link,
.nav-tabs .nav-link.active {
    background-color: #DCDBDC !important;
    border-color: #DCDBDC !important;
}

.det-image-container {
    justify-content: center;
}

.quantity-selector {
    max-width: 4rem;
    background-color: #DCDBDC;
    border: none;
}

.qty-button {
    background: #384D73;
    color: #F5F0EC;
    font-size: medium;
    padding: 0.2rem 1.2rem !important;
}

.review-card .card-header {
    background-color: #DCDBDC !important;
    padding: 10px;
}

.review-card .card-title {
    padding: 8px 0 0 0;
    display: inline-block;
    margin-right: 20px;
    font-size: medium;
}

.review-card .card-header .card-title {
    color: #384D73;
}

.review-card .card-body {
    background-color: #F5F0EC !important;
}

.review-card .card-body .card {
    padding: 0;
    border: none !important;
}

.rating-selector {
    max-width: 100px;
    background-color: #DCDBDC;
    border: none;
}

.rating-button {
    background: #384D73;
    color: #F5F0EC;
    min-width: 160px;
    font-size: medium;
    padding: 0.2rem 0 !important;
}

.review-comment {
    background-color: #dcdbdc8a;
}

/* comment form */

.contact-form-width-control {
    padding: 0 25px;
}

.contact-form-width-control>.form-group {
    padding: 0 15px;
    width: 100%;
}

.contact-form-width-control>.form-group label {
    display: none;
}

/* contact management */

.contact-message-card>.card-body {
    padding: 0;
    margin: 0;
}

.cmt-card-container {
    display: flex;
    flex-wrap: wrap;
    justify-content: center;
    margin-bottom: 100px;
}

.cmt-card {
    width: 360px;
    height: 400px;
    margin: 10px;
}

.cmt-card-body {
    overflow-y: auto;
}

/* Product Form */

.btn-file {
    position: relative;
    overflow: hidden;
}

.btn-file input[type="file"] {
    position: absolute;
    top: 0;
    right: 0;
    min-width: 100%;
    min-height: 100%;
    opacity: 0;
    cursor: pointer;
}

.custom-checkbox .custom-control-label::before {
    border-radius: 0;
    border-color: #dc3545;
}

.custom-checkbox .custom-control-input:checked~.custom-control-label::before {
    background-color: #dc3545;
    border-color: #dc3545;
    border-radius: 0;
}

/* shopping bag */

.table-head-text {
    color: #384D73;
    font-size: 1.4rem !important;
}

tr.table-style p {
    color: #727272;
    font-size: 1.2rem !important;
}

.main-bag-table {
    margin-bottom: 110px;
}

tr.table-style .sku-text {
    font-size: xx-small !important;
}

/* ------------------------------- bootstrap toasts */

.message-container {
    position: fixed;
    top: 110px;
    right: 35px;
    z-index: 99999999999;
}

.custom-toast {
    overflow: visible;
}

.toast-capper {
    height: 3px;
}

.bg-toast-head {
    background-color: #384D73;
    min-width: 300px;
}

.bg-toast-body {
    background-color: #F5F0EC;
    min-width: 300px;
}

/* from CSS-tricks.com: https://css-tricks.com/snippets/css/css-triangle/ */
.arrow-up {
    width: 0;
    height: 0;
    border-left: 4px solid transparent;
    border-right: 4px solid transparent;
    border-bottom: 10px solid black;
    position: absolute;
    top: -10px;
    right: 36px;
}

/* Convenience classes - colors copied from Bootstrap */
.arrow-primary {
    border-bottom-color: #007bff !important;
}

.arrow-secondary {
    border-bottom-color: #6c757d !important;
}

.arrow-success {
    border-bottom-color: #28a745 !important;
}

.arrow-danger {
    border-bottom-color: #dc3545 !important;
}

.arrow-warning {
    border-bottom-color: #ffc107 !important;
}

.arrow-info {
    border-bottom-color: #17a2b8 !important;
}

.arrow-light {
    border-bottom-color: #f8f9fa !important;
}

.arrow-dark {
    border-bottom-color: #343a40 !important;
}

.bag-notification-wrapper {
    height: 100px;
    overflow-x: hidden;
    overflow-y: auto;
}


/* -------------------------------- Media Queries */

@media (max-width: 1300px) {

    .small-screen-menutext,
    .small-screen-droptext a {
        font-size: small !important;
    }

    .nav-link-padding {
        padding: 0 8px !important;
    }
}


/* pad the top of product details overlay */
@media (max-width: 991px) {
    .header-container {
        padding-top: 116px;
    }

    body {
        height: calc(100vh - 116px);
    }
}

/* Slightly larger container on xl screens */
@media (min-width: 1200px) {

    .container {
        max-width: 80%;
    }

    .table-head-text {
        font-size: 1.5rem !important;
    }

    tr.table-style p {
        font-size: 1.3rem !important;
    }
}

/* fixed top navbar only on medium and up */
@media (min-width: 992px) {
    .fixed-top-desktop-only {
        position: fixed;
        top: 0;
        right: 0;
        left: 0;
        z-index: 1030;
    }

    .header-container {
        padding-top: 116px;
    }
}
/* ... */

